<resources>
    <string name="app_name">NORN</string>
    <string name="mercText">Mercury Retrograde:</string>
    <string name="marsText">Mars:</string>
    <string name="marsStatus">rising</string>
    <string name="moonText">Moon Phase:</string>
    <string name="phase">full</string>
    <string name="date">24 May 2017</string>
    <string name="question">Question</string>
    <string name="isMerc">active</string>
    <string name="fortune1">Be Careful Navigating this week, The heavens are tumultuous!</string>
    <string name="fortune2">The heavens are in your favor, you shall take the world!</string>
    <string name="fortune3">Take no steps forward without a friend at each side!</string>
    <string name="fortune4">Perhaps you could think this over a bit longer.</string>
    <string name="fortune5">Indeed, it would be wise to act now while the heavens prevail!</string>
    <string name="marsDesc">Mars</string>
    <string name="mercDesc">Mercury</string>
    <string name="moonDesc">Moon</string>
    <string name="calDesc">calendar</string>
    <string name="questDesc">question</string>
    <string name="prompt">Select a Date</string>
    <string name="selectedDate">Apr 15 2019</string>
    <string name="backDesc">background</string>
    <string name="buttText">Ask the Norns</string>
    <string name="dp">Date Picker</string>
    <string name="aboutTitle">About NORN</string>
    <string name="active">active</string>
    <string name="inactive">inactive</string>
    <string name="error">There has been an error, check the logs.</string>
    <string name="blogDesc">This is a link to Douglas Smiths Blog</string>
    <string name="About">The Ancient Norse believed that there were mystical elderly women that controlled the fates of everything living on the planet. They would use the planets to make some of their predictions about the world, and the end of the world, at Ragnarok. This app uses APIs to check astrological statuses and tell you if you should be making big decisions in your life! </string>
</resources>
